# Phi-Save-Codec

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: c_api.rs  lib.rs  phi_base.rs  test.rs
app/src/api/: game_key.rs  game_progress.rs  game_record.rs  main.rs  mod.rs  summary.rs  user.rs
app/src/game_key/: field.rs  serde.rs
app/src/game_progress/: field.rs  mod.rs  serde.rs
app/src/game_record/: api.rs  field.rs  serde.rs
app/src/phi_field/: base.rs  game_key.rs  game_progress.rs  game_record.rs  mod.rs  summary.rs
app/src/summary/: field.rs  serde.rs
app/src/user/: field.rs  serde.rs
bind/python/: README.md  phi_save_codec.py  requirements.txt
script/: Cargo.toml
script/src/: main.rs
shua_struct/: Cargo.toml
shua_struct/src/: field.rs
shua_struct_macro/: Cargo.toml
shua_struct_macro/src/: lib.rs
