[package]
name = "phi_save_codec"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitvec = "1.0.1"
shua_struct_macro = { path = "../shua_struct_macro" }
shua_struct = { path = "../shua_struct" }
serde = { version = "1", features = ["derive"] }
rmp-serde = { version = "1.3.0", optional = true }


[features]
default = []
c_abi = ["rmp-serde"]