[package]
name = "phi_save_codec"
version = "0.1.0"
edition = "2024"
authors = ["Shua <CHA_Shua@outlook.com>"]
license = "MIT"
repository = "https://github.com/Shua-github/Phi-Save-Codec"
description = "Phigros Cloud Save Codec Library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitvec = "1.0.1"
shua_struct_macro = { version = "0.1.0" }
shua_struct = { version = "0.1.0", features = ["all"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = { version = "1.3.0", optional = true }


[features]
default = []
c_abi = ["rmp-serde"]